--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "name": "sheet-backend",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  }
 }
